--- a/components/form/default.htm
+++ b/components/form/default.htm
@@ -2,20 +2,20 @@
 <p>{{ products }}</p>
 {% else %}
 <style type="text/css">
-    #sellproducts-form .price_sale {
+    .price_sale {
         color: #AA0606;
     }
-    #sellproducts-form .price_old {
+    .price_old {
         text-decoration: line-through;
     }
-    #sellproducts-form .product-quantity {
+    .product-quantity {
         border: 0;
     }
 </style>
 <div class="container">
     <div class="row">
-        <form data-request="onSellProducts" data-request-redirect="" id="sellproducts-form">
-            <div class="col-md-12">
+        <form class="sellproducts" data-request="onSellProducts">
+            <div class="col-md-12" style="margin: 20px 0 10px 0;">
                 <strong>{{ form.personal }}</strong>
             </div>
             <div class="form-group col-md-6">
@@ -25,49 +25,59 @@
                 <input type="text" name="last_name" placeholder="{{ form.last_name }}" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
-                <input type="text" name="email" placeholder="{{ form.email }}" class="form-control" required>
+                <input type="email" name="email" placeholder="{{ form.email }}" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
                 <input type="text" name="phone" placeholder="{{ form.phone }}" class="form-control">
             </div>
             {% if billing %}
-            <div class="col-md-12">
-                <strong>{{ form.billing }}</strong>
-            </div>
-            <div class="form-group col-md-6">
-                <input type="text" name="billing_name" placeholder="{{ form.name }}" class="form-control" required>
-            </div>
-            <div class="form-group col-md-6">
-                <input type="text" name="billing_zipcode" placeholder="{{ form.zipcode }}" class="form-control" required>
-            </div>
-            <div class="form-group col-md-6">
-                <input type="text" name="billing_city" placeholder="{{ form.city }}" class="form-control" required>
-            </div>
-            <div class="form-group col-md-6">
-                <input type="text" name="billing_address" placeholder="{{ form.address }}" class="form-control" required>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-12" style="margin: 10px 0;">
+                        <strong>{{ form.billing }}</strong>
+                    </div>
+                    <div class="form-group col-md-12">
+                        <input type="text" name="billing_name" placeholder="{{ form.name }}" class="form-control" required>
+                    </div>
+                    <div class="form-group col-xs-4">
+                        <input type="text" name="billing_zipcode" placeholder="{{ form.zipcode }}" class="form-control" required>
+                    </div>
+                    <div class="form-group col-xs-8">
+                        <input type="text" name="billing_city" placeholder="{{ form.city }}" class="form-control" required>
+                    </div>
+                    <div class="form-group col-md-12">
+                        <input type="text" name="billing_address" placeholder="{{ form.address }}" class="form-control" required>
+                    </div>
+                </div>
             </div>
             {% endif %}
             {% if shipping %}
-            <div class="col-md-12">
-                <strong>{{ form.shipping }}</strong>
-            </div>
-            <div class="form-group col-md-6">
-                <input type="text" name="shipping_name" placeholder="{{ form.name }}" class="form-control" required>
-            </div>
-            <div class="form-group col-md-6">
-                <input type="text" name="shipping_zipcode" placeholder="{{ form.zipcode }}" class="form-control" required>
-            </div>
-            <div class="form-group col-md-6">
-                <input type="text" name="shipping_city" placeholder="{{ form.city }}" class="form-control" required>
-            </div>
-            <div class="form-group col-md-6">
-                <input type="text" name="shipping_address" placeholder="{{ form.address }}" class="form-control" required>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-12" style="margin: 10px 0;">
+                        <strong>{{ form.shipping }}</strong>
+                    </div>
+                    <div class="form-group col-md-12">
+                        <input type="text" name="shipping_name" placeholder="{{ form.name }}" class="form-control" required>
+                    </div>
+                    <div class="form-group col-xs-4">
+                        <input type="text" name="shipping_zipcode" placeholder="{{ form.zipcode }}" class="form-control" required>
+                    </div>
+                    <div class="form-group col-xs-8">
+                        <input type="text" name="shipping_city" placeholder="{{ form.city }}" class="form-control" required>
+                    </div>
+                    <div class="form-group col-md-12">
+                        <input type="text" name="shipping_address" placeholder="{{ form.address }}" class="form-control" required>
+                    </div>
+                </div>
             </div>
             {% endif %}
+            {% if comment %}
             <div class="col-md-12">
-                {% if comment %}
-                <textarea name="comment" placeholder="{{ form.comment }}" class="form-control"></textarea><br>
-                {% endif %}
+                <textarea name="comment" placeholder="{{ form.comment }}" class="form-control"></textarea>
+            </div>
+            {% endif %}
+            <div class="col-md-12" style="margin: 24px 0 4px 0;">
                 <strong>{{ form.items }}</strong>
             </div>
             <input type="hidden" name="category" value="{{ category }}">
@@ -91,7 +101,7 @@
                 <strong>{{ form.total }}:</strong>
             </div>
             <div class="col-md-4">
-                <strong><span id="sellproducts-quantity">0</span> {{ category.unit }}</strong>
+                <strong><span id="sellproducts-quantity">0</span> {{ form.unit }}</strong>
             </div>
             <div class="col-md-3 text-right">
                 <strong><span id="sellproducts-total">0</span> {{ category.currency }}</strong>
@@ -128,10 +138,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
         $('#sellproducts-quantity').html(quantity);
         $('#sellproducts-total').html(total);
-    });
-
-    $('.sellproducts-payment').click(function() {
-        $('#sellproducts-form').attr('data-request-redirect', $(this).attr('data-redirect'));
     });
 });
 </script>
